Fix overflow image on mobile

--- a/css/mythology.css
+++ b/css/mythology.css
@@ -134,6 +134,9 @@ body {
         display: inline-block;
         padding: 40px 20px;
     }
+    .gallery-frame ul li img {
+        width: 90%;
+    }
 
     .text-frame {
         width: 60%;
@@ -143,7 +146,7 @@ body {
         line-height: 2em;
     }
     .text-frame img {
-        width:100%;
+        width:90%;
     }
     .center {
         text-align: center;
